environments/undefined-undefined-1/aap-instance/base/controller_route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-sandbox
  name: undefined-undefined-1-controller
  labels:
    app.kubernetes.io/component: automationcontroller
    app.kubernetes.io/managed-by: automationcontroller-operator
    app.kubernetes.io/operator-version: ''
    app.kubernetes.io/part-of: undefined-undefined-1-controller
spec:
  host: undefined-controller-1.apps.k8s.sandbox1760.opentlc.com
  to:
    kind: Service
    name: undefined-undefined-1-controller-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
