environments/undefined-undefined-1/aap-instance/base/hub_route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-sandbox
  name: undefined-undefined-1-hub
  labels:
    app.kubernetes.io/managed-by: hub-operator
    app.kubernetes.io/instance: ${BRANCH_NAME}-${TEAM_NAME}-${INSTANCE_ID}
    app.kubernetes.io/part-of: undefined-undefined-1-hub
spec:
  host: undefined-hub-1.apps.k8s.sandbox1760.opentlc.com
  to:
    kind: Service
    name: undefined-undefined-1-hub-api-svc
    weight: 100
  port:
    targetPort: api-24817
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
